Build RC 2.4 September 4, 2011
* Fix issue with Debug window not showing in the Server Tree 
* Add popup menu for Channel List in the Server Tree 
* Fix issue with ChannelKick event in Plugins, Host now passes self nick

Build RC 2.3 August 30, 2011
* Automatically export English.xml Language file to Languages folder if it does not exist 
* Add /timers command to show all timers for current connection, shows in Console
* Add $timer(id) identifier, with properties .id, .reps, .count, .interval and .command
* Fix issue with closing a window, Server Tree does not show proper window highlighted 
* Add in the $+ identifier, used for joining to other words/identifiers

Build RC 2.2 August 21, 2011
* Double clicking the expand/collapse icon in the server tree does not cause a connect/disconnect
* Added $osbits to return if we are using a 32bit or 64bit OS
* Fixed issue with pasting 2 lines, but 2nd line was blank, would paste as 2 lines
* Add scrollbar to Topic Bar

Build RC 2.1 August 19, 2011
* Add ability to show a settings form for a plugin, from the Plugins Menu 
* Plugins settings (if enabled or disabled) remembered in IceChatPlugins.xml file 
* Remove the channel bar completely 
* Add a close button menu item to the Menu bar to close the current window 

Build RC 2.0 August 14, 2011
* Add ability to Enable/Disable a Plugin from Options Menu
* Fix loading of plugins in Mono from start of Program
* Ability to Enable/Disable a Plugin, does not unload it, just disables it 
* Fix scrollbar in channel list/search bar and make search ability to search channel name and topic 
* Add a background image to a channel,query,console, @window from /bg command
* Allow to use a web image for a background image using full URL 
* Allow DCC Chat messages to show and parse /me messages 
* Add option to Autoget IP Router IP Address 
* Add menu item for Server Tree popup menu to remove a Server 



Build RC 1.5 August 7, 2011